--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.3",
     "axios": "^0.27.2",
+    "jwt-decode": "^3.1.2",
     "next": "12.2.4",
     "next-redux-wrapper": "^7.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-notifications": "^1.7.4",
     "react-redux": "^8.0.2",
     "sass": "^1.54.4"
   },
@@ -22,8 +24,13 @@
     "@types/node": "18.6.5",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
+    "@types/react-redux-toastr": "^7.6.2",
+    "@typescript-eslint/eslint-plugin": "^5.33.1",
+    "@typescript-eslint/parser": "^5.33.1",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.4",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.2.1",
     "typescript": "4.7.4"
   }
 }
