--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-dom": "18.2.0",
     "react-notifications": "^1.7.4",
     "react-redux": "^8.0.2",
-    "sass": "^1.54.4"
+    "sass": "^1.54.4",
+    "swiper": "^8.3.2"
   },
   "devDependencies": {
     "@types/node": "18.6.5",
