--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.3",
     "axios": "^0.27.2",
+    "axios-auth-refresh": "^3.3.3",
+    "cookie-parser": "^1.4.6",
+    "js-cookie": "^3.0.1",
     "jwt-decode": "^3.1.2",
     "next": "12.2.4",
     "next-redux-wrapper": "^7.0.5",
@@ -22,6 +25,7 @@
     "swiper": "^8.3.2"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.3",
     "@types/node": "18.6.5",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
