--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@adminjs/design-system": "^3.0.1",
     "@reduxjs/toolkit": "^1.8.3",
     "axios": "^0.27.2",
     "axios-auth-refresh": "^3.3.3",
+    "clsx": "^1.2.1",
     "cookie-parser": "^1.4.6",
     "js-cookie": "^3.0.1",
+    "jsondiffpatch": "^0.4.1",
     "jwt-decode": "^3.1.2",
     "next": "12.2.4",
     "next-redux-wrapper": "^7.0.5",
@@ -22,6 +25,8 @@
     "react-notifications": "^1.7.4",
     "react-redux": "^8.0.2",
     "sass": "^1.54.4",
+    "socket.io-client": "^4.5.1",
+    "styled-components": "^5.3.5",
     "swiper": "^8.3.2"
   },
   "devDependencies": {
