--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "axios-auth-refresh": "^3.3.3",
     "clsx": "^1.2.1",
     "cookie-parser": "^1.4.6",
+    "eslint-config-prettier": "^8.5.0",
     "js-cookie": "^3.0.1",
     "jsondiffpatch": "^0.4.1",
     "jwt-decode": "^3.1.2",
     "next": "12.2.4",
+    "next-auth": "^4.17.0",
     "next-redux-wrapper": "^7.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
