--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "js-cookie": "^3.0.1",
     "jsondiffpatch": "^0.4.1",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.4",
     "next": "12.2.4",
     "next-auth": "^4.17.0",
     "next-redux-wrapper": "^7.0.5",
