--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "jsondiffpatch": "^0.4.1",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
-    "next": "12.2.4",
+    "next": "^13.0.5",
     "next-auth": "^4.17.0",
     "next-redux-wrapper": "^7.0.5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-grid-gallery": "^0.5.6",
     "react-notifications": "^1.7.4",
     "react-redux": "^8.0.2",
@@ -40,7 +40,7 @@
     "@typescript-eslint/eslint-plugin": "^5.33.1",
     "@typescript-eslint/parser": "^5.33.1",
     "eslint": "8.21.0",
-    "eslint-config-next": "12.2.4",
+    "eslint-config-next": "^13.0.5",
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.2.1",
     "typescript": "4.7.4"
