--- a/package.json
+++ b/package.json
@@ -11,27 +11,20 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.3",
     "axios": "^0.27.2",
-    "axios-auth-refresh": "^3.3.3",
     "clsx": "^1.2.1",
-    "cookie-parser": "^1.4.6",
     "eslint-config-prettier": "^8.5.0",
-    "js-cookie": "^3.0.1",
-    "jsondiffpatch": "^0.4.1",
-    "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
     "next": "^13.0.5",
     "next-auth": "^4.17.0",
     "next-redux-wrapper": "^7.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-image-gallery": "^1.2.11",
     "react-notifications": "^1.7.4",
     "react-redux": "^8.0.2",
     "react-responsive-carousel": "^3.2.23",
     "react-simple-star-rating": "^5.1.7",
     "sass": "^1.54.4",
-    "socket.io-client": "^4.5.1",
-    "swiper": "^8.3.2"
+    "socket.io-client": "^4.5.1"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.3",
