--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next-redux-wrapper": "^7.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-notifications": "^1.7.4",
     "react-redux": "^8.0.2",
     "react-responsive-carousel": "^3.2.23",
@@ -31,6 +32,7 @@
     "@types/node": "18.6.5",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
+    "@types/react-modal": "^3.13.1",
     "@types/react-redux-toastr": "^7.6.2",
     "@typescript-eslint/eslint-plugin": "^5.33.1",
     "@typescript-eslint/parser": "^5.33.1",
