--- a/package.json
+++ b/package.json
@@ -3,20 +3,42 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "run-p dev:*",
+    "dev:next": "next dev",
+    "dev:wss": "NODE_ENV=development tsx watch src/server/wsServer.ts",
+    "dev:admin": "PORT=3205 tsx watch src/server/admin/admin.ts",
     "build": "next build",
     "start": "next start",
+    "postinstall": "prisma generate",
+    "db-seed": "NODE_ENV=development prisma db seed",
+    "db-migrate": "NODE_ENV=development prisma migrate dev --name",
+    "db-reset": "NODE_ENV=development prisma migrate reset",
     "lint": "next lint"
   },
   "dependencies": {
+    "@adminjs/express": "^4.0.0",
+    "@adminjs/prisma": "^3.0.0",
+    "@next-auth/prisma-adapter": "^1.0.5",
+    "@prisma/client": "^4.5.0",
     "@reduxjs/toolkit": "^1.8.3",
+    "@tanstack/react-query": "^4.16.0",
+    "@trpc/client": "^10.0.0",
+    "@trpc/next": "^10.0.0",
+    "@trpc/react-query": "^10.0.0",
+    "@trpc/server": "^10.0.0",
+    "adminjs": "6.7.0",
+    "argon2": "^0.30.2",
     "axios": "^0.27.2",
     "clsx": "^1.2.1",
     "eslint-config-prettier": "^8.5.0",
+    "express": "^4.17.1",
+    "fastify": "^4.11.0",
     "moment": "^2.29.4",
     "next": "^13.0.5",
     "next-auth": "^4.17.0",
     "next-redux-wrapper": "^7.0.5",
+    "node-fetch": "^3.3.0",
+    "npm-run-all": "^4.1.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
@@ -25,21 +47,33 @@
     "react-responsive-carousel": "^3.2.23",
     "react-simple-star-rating": "^5.1.7",
     "sass": "^1.54.4",
-    "socket.io-client": "^4.5.1"
+    "socket.io-client": "^4.5.1",
+    "superjson": "1.9.1",
+    "zod": "^3.18.0"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.3",
-    "@types/node": "18.6.5",
+    "@types/node": "^18.11.18",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
     "@types/react-modal": "^3.13.1",
     "@types/react-redux-toastr": "^7.6.2",
+    "@types/styled-components": "^5.1.26",
+    "@types/ws": "^8.5.4",
     "@typescript-eslint/eslint-plugin": "^5.33.1",
     "@typescript-eslint/parser": "^5.33.1",
+    "cross-env": "^7.0.3",
     "eslint": "8.21.0",
     "eslint-config-next": "^13.0.5",
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.2.1",
-    "typescript": "4.7.4"
+    "prisma": "^4.5.0",
+    "rollup-plugin-polyfill-node": "^0.11.0",
+    "ts-node": "^10.9.1",
+    "tsx": "^3.12.1",
+    "typescript": "^4.9.4"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   }
 }
